--- a/blog-frontend/public/index.html
+++ b/blog-frontend/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>고칠래 만들래</title>
+    <title>리액트 블로그</title>
   </head>
   <body>
     <noscript>
